# seahorse

./: .env_moe_template  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  discord.sh  docker-compose.yml  flake.nix  football_bot.sh  football_cache.json  pyproject.toml  q.text  restart.sh  seahorse  shell.nix  telegram.sh
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: post_task.sh  pre_commit.sh  pre_task.sh
.claude/skills/architecture/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/ffi-bridge/: SKILL.md
.claude/skills/performance/: SKILL.md
.claude/skills/python-ai/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/rust-core/: SKILL.md
.claude/skills/testing/: SKILL.md
.seahorse/: index.graph.json  index.hnsw.data  index.hnsw.graph  index.metadata.json
crates/seahorse-cli/: Cargo.toml
crates/seahorse-cli/src/: config.rs  main.rs  setup.rs
crates/seahorse-cli/src/client/: auth.rs  mod.rs  streaming.rs
crates/seahorse-cli/src/orchestrator/: indexer.rs  memory.rs  mod.rs  patterns.rs  refactor.rs  searcher.rs  session.rs
crates/seahorse-cli/src/tui/: chat.rs  mod.rs  progress.rs  widgets.rs
crates/seahorse-core/: Cargo.toml
crates/seahorse-core/benches/: memory_bench.rs
crates/seahorse-core/src/: agent.rs  analysis.rs  bus.rs  config.rs  error.rs  fast_path.rs  graph.rs  lib.rs  memory.rs  scheduler.rs  tasks.rs  viz.rs  wasm.rs  worker.rs
crates/seahorse-core/src/memory/: embedding.rs  graph.rs  io.rs  mod.rs  tests.rs
crates/seahorse-core/src/networking/: mod.rs  rate_limiter.rs
crates/seahorse-core/src/worker/: mod.rs  runner.rs  supervisor.rs  task_loop.rs  tests.rs
crates/seahorse-ffi/: Cargo.toml
crates/seahorse-ffi/src/: agent.rs  analysis.rs  bus.rs  circuit_breaker.rs  embeddings.rs  graph_runner.rs  lib.rs  memory.rs  networking.rs  optimizer.rs  refactor.rs  tasks.rs  viz.rs  wasm.rs
crates/seahorse-router/: Cargo.toml
crates/seahorse-router/src/: auth.rs  error.rs  handlers.rs  lib.rs  main.rs  telemetry.rs
docker/: docker-compose.yml
docs/: agent-v2-plan-execute-persist-design.md  overall-progress.md  phase2-complete.md  phase2-progress-summary.md  phase3-complete.md  seahorse-cli-progress.md
knowledge/: seahorse_overview.md  setup_guide.jsonl
python/: stress_test_polars.py  verify_proactive.py
python/seahorse_ai/: __init__.py  graph_db.py  hitl.py  knowledge.py  llm.py  load_kb.py  nodes.py  observability.py  planner.py  planner_legacy.py  prompts.py  rag.py  rag_qdrant.py  router.py  schemas.py  swarm.py
python/seahorse_ai/adapters/: discord_adapter.py  telegram_adapter.py
python/seahorse_ai/analysis/: feeder.py  football_eval.py  football_scanner.py  watcher.py
python/seahorse_ai/api/: load_kb.py
python/seahorse_ai/api/adapters/: discord_adapter.py  telegram_adapter.py
python/seahorse_ai/core/: autopilot.py  embedding_helpers.py  embeddings.py  hitl.py  llm.py  nodes.py  observability.py  router.py  schemas.py  skills.py
python/seahorse_ai/engines/: graph_db.py  knowledge.py  swarm.py
python/seahorse_ai/engines/rag/: rag.py  rag_qdrant.py
python/seahorse_ai/hindsight/: __init__.py  models.py  recaller.py  reflector.py  reranker.py  retainer.py  visualizer.py
python/seahorse_ai/planner/: __init__.py  circuit_breaker.py  critic.py  decomposer.py  executor.py  fast_path.py  fast_path_old.py.bak  fast_utils.py  hybrid_orchestrator.py  hybrid_schemas.py  memory_reasoner.py  memory_recorder.py  optimizations.py  session_memory.py  strategy.py
python/seahorse_ai/planner/handlers/: base.py  (+4 more)
python/seahorse_ai/prompts/: __init__.py  cfo_core.py  confidence.py  core.py  few_shot.py  intent.py  intent_config.json  story.py  strategy.py  tool_rules.py
python/seahorse_ai/skills/: __init__.py  base.py  library.py
python/seahorse_ai/teams/: __init__.py  base.py  library.py
python/seahorse_ai/tools/: __init__.py  auto_architect.py  auto_seahorse.py  base.py  browser.py  business_math.py  competitor_radar.py  data_connectors.py  data_profiler.py  db.py  duckdb_analyst.py  echarts_viz.py  filesystem.py  football_schemas.py  football_stats.py  forecaster.py  graph_memory.py  guard.wat  integrations.py  mcp_client.py  memory.py  memory_extractor.py  memory_reflector.py  polars_analyst.py  python_interpreter.py  strategy_engine.py  table_viz.py  tool_manifest.json  viz.py  web_search.py
python/seahorse_api/: __init__.py  main.py
python/seahorse_api/routers/: __init__.py  agent.py
python/seahorse_cli/: __init__.py
python/seahorse_cli/agents/: __init__.py  code_analyst.py  memory_curator.py  refactor_crew.py
python/seahorse_cli/prompts/: __init__.py  analysis.py  refactoring.py
python/seahorse_cli/tools/: __init__.py  ast_parser.py  code_search.py  dependency_graph.py  refactor_suggester.py
python/seahorse_ffi/: __init__.py
python/tests/: __init__.py  benchmark_config.json  benchmark_results.json  benchmark_self_correction.py
rust/: Cargo.toml
rust/ghost-ui/: package.json
rust/ghost-ui/src/: App.css  App.tsx
rust/ghost-ui/src-tauri/: Cargo.toml  tauri.conf.json
rust/ghost-ui/src-tauri/src/: lib.rs  main.rs
rust/src/: lib.rs  main.rs
rust/src/core/: executor.rs  mod.rs  swarm.rs
rust/src/platform/: macos.rs
scripts/: shabu_data_gen.py  verify_strategy_planning.py
seahorse-desktop/: bun.lockb  package.json
seahorse-desktop/src/: App.css  App.tsx
seahorse-desktop/src-tauri/: Cargo.toml  tauri.conf.json
seahorse-desktop/src-tauri/src/: main.rs
seahorse-desktop/src/components/: Dashboard.tsx  MessageItem.tsx  MessageList.tsx  Sidebar.tsx  Widget.tsx
seahorse-desktop/src/hooks/: useChat.ts  useTheme.ts
seahorse-desktop/src/layouts/: MainLayout.tsx
seahorse-desktop/src/pages/: Analyst.tsx  Memory.tsx  Reports.tsx  Settings.tsx
seahorse-desktop/src/routes/: index.tsx
seahorse-desktop/src/styles/: Analyst.css  MainLayout.css  MessageItem.css  MessageList.css  Sidebar.css  global.css
seahorse-desktop/src/types/: chat.ts  eleung.d.ts
workspace/: hello.txt
(+67 files in other folders)
