[workspace]
resolver = "2"
members = [
    "crates/seahorse-core",
    "crates/seahorse-router",
    "crates/seahorse-ffi", "rust",
    "rust/ghost-ui/src-tauri",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Seahorse Team"]
license     = "MIT"
repository  = "https://github.com/seahorse/seahorse-agent"

[workspace.dependencies]
# Streaming
futures-util  = "0.3"
tokio-stream  = "0.1"
# Async runtime
tokio        = { version = "1",    features = ["full"] }
# HTTP
axum         = { version = "0.7",  features = ["ws", "macros"] }
tower        = { version = "0.4",  features = ["util"] }
tower-http   = { version = "0.5",  features = ["trace", "cors", "auth"] }
# Serialization
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
# Error handling
thiserror    = "1"
anyhow       = "1"
# Logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24"
opentelemetry        = { version = "0.23", features = ["trace"] }
opentelemetry_sdk    = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp   = { version = "0.16", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.15"
# Utility
once_cell   = "1"
bytes       = "1"
uuid        = { version = "1", features = ["v4"] }
# PyO3 (FFI)
pyo3        = { version = "0.21", features = ["abi3-py311", "auto-initialize"] }
# Vector search
hnsw_rs     = "0.3"
# WASM sandbox
wasmtime    = "20"
# Alignment-safe casting (zero-copy f32 slices)
bytemuck    = { version = "1", features = ["derive"] }

[workspace.lints.clippy]
all       = "warn"
pedantic  = "warn"
# Allowed exceptions (too noisy or inapplicable)
must_use_candidate         = "allow"
module_name_repetitions    = "allow"
missing_errors_doc         = "allow"
missing_panics_doc         = "allow"
