[workspace]
resolver = "2"
members = [
    "crates/seahorse-core",
    "crates/seahorse-router",
    "crates/seahorse-ffi",
    "crates/seahorse-cli",
    "seahorse-desktop/src-tauri",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Seahorse Team"]
license     = "MIT"
repository  = "https://github.com/seahorse/seahorse-agent"

[workspace.dependencies]
# Streaming
futures-util  = "0.3"
tokio-stream  = "0.1"
# Async runtime
tokio        = { version = "1",    features = ["full"] }
# HTTP
axum         = { version = "0.7",  features = ["ws", "macros"] }
tower        = { version = "0.4",  features = ["util"] }
tower-http   = { version = "0.5",  features = ["trace", "cors", "auth"] }
# Serialization
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
chrono       = "0.4"
# Error handling
thiserror    = "1"
anyhow       = "1"
# Logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24"
opentelemetry        = { version = "0.23", features = ["trace"] }
opentelemetry_sdk    = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp   = { version = "0.16", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.15"
# Utility
once_cell   = "1"
bytes       = "1"
uuid        = { version = "1", features = ["v4"] }
dotenvy     = "0.15"
# HTTP Client
reqwest     = { version = "0.11", features = ["json"] }
# PyO3 (FFI)
pyo3        = { version = "0.21", features = ["abi3-py39", "auto-initialize"] }
# Vector search
hnsw_rs     = "0.3"
# WASM sandbox
wasmtime    = "20"
# Alignment-safe casting (zero-copy f32 slices)
bytemuck    = { version = "1", features = ["derive"] }
# AI Framework
rig-core    = "0.6.0"
# Data Engineering
polars      = { version = "0.41", features = ["lazy", "sql", "json", "parquet", "dtype-datetime"] }
# Visualization
charming = "0.3" # Effective Echarts wrapper for Rust
# Rate Limiting
governor = "0.6"
async-trait = "0.1"
# SQLite Database
rusqlite    = { version = "0.31", features = ["bundled"] }
# CLI dependencies
clap        = { version = "4.5", features = ["derive"] }
ratatui     = "0.26"
crossterm   = "0.27"
ansi-to-tui = "6.0"
tui-widgets = "0.3"
color-eyre  = "0.6"

[workspace.lints.clippy]
all       = "warn"
pedantic  = "warn"
# Allowed exceptions (too noisy or inapplicable)
must_use_candidate         = "allow"
module_name_repetitions    = "allow"
missing_errors_doc         = "allow"
missing_panics_doc         = "allow"

[profile.dev]
incremental = true   # ✅ เปิด incremental compilation (เร็วขึ้น 10-100x)
codegen-units = 256 # ✅ Parallel codegen (dev only)

[profile.dev.package."*"]
opt-level = 0       # ✅ Dependencies ไม่ optimize (เร็วขึ้น)

[profile.release]
incremental = false
lto = "fat"            # ✅ Full LTO - เพื่อความรัดกุมและประสิทธิภาพสูงสุด
codegen-units = 1      # Release: optimize for maximal speed
panic = "abort"        # ลดขนาด binary และแถมความเร็วเพิ่มนิดหน่อย
opt-level = 3          # Max optimization
strip = true           # ลบ debug symbols ออกทั้งหมดอัตโนมัติ
