[project]
name = "seahorse-ai"
version = "0.1.0"
description = "High-Performance AI Agent — Python Intelligence Layer"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.63.1",
    "playwright>=1.50.1",
    "google-api-python-client>=2.162.0",
    "slack-sdk>=3.34.0",
    "pydantic>=2.0.0",
    "neo4j>=5.0.0",
    "anyio>=4.3",
    "httpx>=0.27",
    "opentelemetry-sdk>=1.24",
    "maturin>=1.12.6",
    "numpy>=2.4.2",
    "duckduckgo-search>=8.1.1",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-semantic-conventions>=0.61b0",
    "pyjwt>=2.11.0",
    "discord.py>=2.3.2",
    "psycopg2-binary>=2.9.11",
    "mcp>=1.26.0",
    "qdrant-client>=1.17.0",
    "faker>=40.8.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "python-telegram-bot>=21.0",
    "seaborn>=0.13.2",
    "pyyaml>=6.0.3",
    "polars>=1.2.1",
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "msgspec>=0.20.0",
]

[build-system]
requires      = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features      = ["pyo3/extension-module"]
python-source = "python"
module-name   = "seahorse_ffi"
manifest-path = "crates/seahorse-ffi/Cargo.toml"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "httpx>=0.27",
]

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ASYNC", # flake8-async
    "N",    # pep8-naming
]
ignore = [
    "D203",    # One blank line before class
    "D212",    # Multi-line summary first line
    "E501",    # Line too long (we have many long prompts)
    "ASYNC230", # Async open() - using blocking open is fine for small files here
    "ASYNC240", # Async os.path - using blocking os.path is fine here
]
# We've removed ANN and D from select for now to focus on logic errors.
# You can add them back later as you want to document the project.

[tool.ruff.lint.isort]
known-first-party = ["seahorse_ai", "seahorse_ffi"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
strict              = true
python_version      = "3.11"
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["python/tests"]
addopts      = "-q --tb=short"
