[package]
name    = "seahorse-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
once_cell   = { workspace = true }
bytes       = { workspace = true }
uuid        = { workspace = true }
hnsw_rs     = { workspace = true }
wasmtime    = { workspace = true }
bytemuck    = { workspace = true }
dashmap     = { version = "6.1.0", features = ["serde"] }
rig-core    = { workspace = true }
reqwest     = { workspace = true }
polars      = { workspace = true }
charming      = { workspace = true }
governor      = { workspace = true }
async-trait   = { workspace = true }
rusqlite      = { workspace = true }
candle-core   = "0.8.2"
candle-nn     = "0.8.2"
candle-transformers = "0.8.2"
tokenizers    = "0.21.0"
hf-hub        = "0.3.2"

[dev-dependencies]
tokio = { workspace = true }

[[bench]]
name    = "memory_bench"
harness = false
