[package]
name    = "seahorse-ffi"
version.workspace = true
edition.workspace = true

[lib]
name       = "seahorse_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
seahorse-core = { path = "../seahorse-core" }
pyo3          = { workspace = true, features = ["auto-initialize"] }
tokio         = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json    = { workspace = true }
once_cell     = { workspace = true }
bytemuck      = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
async-trait   = { workspace = true }
regex         = "1.10"
unicode-normalization = "0.1"

[features]
extension-module = ["pyo3/extension-module"]

[build-dependencies]
pyo3-build-config = "0.21"