[package]
name    = "seahorse-router"
version.workspace = true
edition.workspace = true

[dependencies]
seahorse-core = { path = "../seahorse-core" }
seahorse-ffi  = { path = "../seahorse-ffi" }
tokio         = { workspace = true }
axum          = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber         = { workspace = true }
tracing-opentelemetry      = { workspace = true }
opentelemetry              = { workspace = true }
opentelemetry_sdk          = { workspace = true }
opentelemetry-otlp         = { workspace = true }
uuid          = { workspace = true }
bytes         = { workspace = true }
futures-util  = { workspace = true }
tokio-stream  = { workspace = true }
jsonwebtoken  = "9"
chrono        = { version = "0.4", features = ["serde"] }
once_cell     = { workspace = true }
dotenvy       = { workspace = true }

[[bin]]
name = "seahorse-router"
path = "src/main.rs"
